<resources>
    <string name="app_name">Onboard U</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="first_fragment">First Fragment!</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="sign_up_complete">Sign Up Complete</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="phone_no">Phone No</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="already_a_user">Already A User?</string>
    <string name="login">Login</string>
    <string name="sign_up_by_entering_either_your_email_or_phone_no">Sign Up By Entering Either Your Email Or Phone No</string>
    <string name="enter_the_otp_sent_to_your_phone_no_email_address">Enter The OTP Sent To Your Phone No/Email Address</string>
    <string name="yet_to_sign_up">Yet To Sign Up?</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="confirm_gst_cert_no">Confirm GST Cert No</string>
    <string name="upload_gst_certificate">Upload GST Certificate</string>
    <string name="choose_the_document_to_upload"><u>Choose the document to upload</u></string>
    <string name="verify_gst_details">Verify GST Details</string>
    <string name="trade_name">Trade Name</string>
    <string name="enter_trade_name">Enter Trade Name</string>
    <string name="gst_no">GST No</string>
    <string name="enter_gst_no">Enter GST No</string>
    <string name="gst_type">GST Type</string>
    <string name="enter_gst_type">Enter GST Type</string>
    <string name="address_of_principle_place_of_business">Address of Principle Place of Business</string>
    <string name="enter_address_of_principle_place_of_business">Enter Address of Principle Place of Business</string>
    <string name="continue_to_verify">Continue To Verify</string>
    <string name="registration_complete">Registration Complete</string>
    <string name="proceed_to_product_listing">Proceed To Product Listing</string>
    <string name="your_seller_id_is">Your Seller ID is:</string>
    <string name="your_seller_name">Your Seller Name:</string>
    <string name="loading">Loading...</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="take_photo_or_video">Take Photo or Video</string>
    <string name="photo_library">Photo Library</string>
    <string name="add_from">Add From…</string>
    <string name="file">File</string>
    <string name="scan_document">Scan Document</string>
    <string name="email_empty">Email should not empty</string>
    <string name="email_valid">Please enter valid email</string>
    <string name="password_empty">Password should not empty</string>
    <string name="confirm_password_empty">Confirm password should not empty</string>
    <string name="name_empty">Name should not empty</string>
    <string name="confirm_password_equal">Password and Confirm Password must same</string>
    <string name="pin_empty">OTP should not empty</string>
    <string name="permission_label">permission</string>
    <string name="write_external_storage_title">write external storage title</string>
    <string name="allow_storage_permission">allow storage permission</string>
    <string name="permission">Permission</string>
    <string name="camera_title">Camera Permission is necessary</string>
    <string name="choose_image">Choose Image</string>
    <string name="option_camera">Camera</string>
    <string name="option_gallery">Gallery</string>
    <string name="option_cancel">Cancel</string>
    <string name="skip">skip</string>
    <string name="legal_name">Legal Name</string>
    <string name="enter_legal_name">Enter Legal Name</string>
    <string name="trade_name_empty">Trade Name should not empty</string>
    <string name="gst_no_empty">GST No should not empty</string>
    <string name="gst_type_empty">GST Type should not empty</string>
    <string name="legal_name_empty">Legal Name should not empty</string>
    <string name="gst_address_empty">Business Address should not empty</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile\n</string>
    <string name="chat">Chat\n</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_name_empty">Product Name Should not empty</string>
    <string name="product_price_empty">Product Price Should not empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>