<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/action_home"
    android:id="@+id/nav_graph.xml">

    <fragment
        android:id="@+id/action_home"
        android:name="com.example.wifimodule.presentation.home_fragment.HomeFragment"
        android:label="@string/home_fragment"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/action_profile"
        android:name="com.example.wifimodule.presentation.profile.ProfileFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/fragment_profile">

    </fragment>

    <fragment
        android:id="@+id/action_create_single_catelogue"
        android:name="com.example.wifimodule.presentation.add_single_catelogue.AddSingleCatelogueFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/fragment_add_single_catelogue">

    </fragment>

    <fragment
        android:id="@+id/chat"
        android:name="com.example.wifimodule.presentation.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat">
    </fragment>
</navigation>