<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/select_file"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/lbl_gallery"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/darker_gray"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/take_photo_or_video"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/darker_gray"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/photo_library"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/darker_gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCamera"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/lbl_camera"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/darker_gray"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:text="@string/add_from"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:visibility="gone" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@drawable/drawable_white"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>